--- a/themes/ink/layouts/_default/baseof.html
+++ b/themes/ink/layouts/_default/baseof.html
@@ -8,7 +8,7 @@
             <td valign="top" id="content">
                 {{ partial "header-backup.html" (dict "dateTime" "07/04/2022 (15:30:40)" "controlNo" "2408703312" "memberId" "56559252325") }}
                 {{- block "main" . -}}{{- end -}}
-                {{ partial  "footer.html" (dict "pageNo" .Params.pageNo "cin" "U72300MH2000PLC128359" ) }}
+                {{ partial  "footer.html" (dict "pageNo" .Params.pageNo "consumerName" "MOHANA PARAB" ) }}
             </td>
         </tr>
     </table>
