--- a/themes/ink/layouts/partials/footer.html
+++ b/themes/ink/layouts/partials/footer.html
@@ -11,7 +11,7 @@
     </tr>
     <tr class="footer-text-dark">
         <td style="text-align: left;">
-            <p>TransUnion CIBIL CIN : {{ .cin }}</p>
+            <p class="font-22">COMPREHENSIVE CIR - {{ .consumerName }}</p>
         </td>
         <td style="text-align: right;">
             <p>Page {{ .pageNo }}</p>
