--- a/themes/ink/static/scss/style.scss
+++ b/themes/ink/static/scss/style.scss
@@ -2167,7 +2167,7 @@ tfoot {
 
 $grey5 : #707070;
 
-.grey5{
+.grey5 {
   color: $grey5;
 }
 
@@ -2179,36 +2179,39 @@ $grey5 : #707070;
 }
 
 .font-18 {
-  &-book{
+  &-book {
     @include fontStyle(18px, 24px, 400);
   }
-  &-bold{
+
+  &-bold {
     @include fontStyle(18px, 24px, 700);
   }
 }
+
 .font-20 {
-  &-bold{
+  &-bold {
     @include fontStyle(20px, 24px, 700);
   }
-  &-regular{
+
+  &-regular {
     @include fontStyle(20px, 24px, 600);
   }
 }
 
 .font-22 {
-  &-bold{
+  &-bold {
     @include fontStyle(22px, 44px, 700);
   }
 }
 
 .font-36 {
-  &-bold{
+  &-bold {
     @include fontStyle(36px, 50px, 700);
   }
 }
 
-.text{
-  &-uppercase{
+.text {
+  &-uppercase {
     text-transform: uppercase;
   }
 }
@@ -2233,58 +2236,73 @@ $grey5 : #707070;
   }
 }
 
-#table-title{
+#table-title {
   margin-bottom: 10px;
-  .right-side{
+
+  .right-side {
     width: 20%;
   }
 }
+
 .ref-no {
   @include fontStyle(16px, 24px, 700);
   color: #2C2C2C;
   margin: 0px;
-  .title{
+
+  .title {
     color: #ACACAC;
     text-transform: uppercase;
     margin-right: 10px;
   }
 }
+
 .main-container .table-title {
   margin-bottom: 0px;
 }
-.report-table{
+
+.report-table {
   border-bottom: 1px solid #acacac;
+
   thead>tr:first-child>th:last-child {
     border-top-right-radius: 7px;
   }
+
   thead>tr:first-child>th:first-child {
     border-top-left-radius: 7px;
   }
-  .title, .content{
+
+  .title,
+  .content {
     margin: 0px;
   }
-  .title{
+
+  .title {
     @include fontStyle(14px, 24px, 700);
     color: #00A6CA;
     text-transform: uppercase;
   }
-  .content{
+
+  .content {
     @include fontStyle(18px, 24px, 600);
     color: #2C2C2C;
-    b{
+
+    b {
       font-weight: 700;
     }
   }
-  .font-20-bold{
+
+  .font-20-bold {
     @include fontStyle(20px, 24px, 700);
   }
-  .grey5{
+
+  .grey5 {
     letter-spacing: 0.02em;
     margin-right: 10px;
   }
-  &-style1{
-    thead{
-      th{
+
+  &-style1 {
+    thead {
+      th {
         background: #F6F7FC;
         @include fontStyle(18px, 24px, 700);
         color: $grey5;
@@ -2294,25 +2312,57 @@ $grey5 : #707070;
         text-align: left;
       }
     }
-    td:not(:last-child), th:not(:last-child){
+
+    td:not(:last-child),
+    th:not(:last-child) {
       border-right: 1px solid #ACACAC;
-      table{
-        td:not(:last-child), th:not(:last-child){
+
+      table {
+
+        td:not(:last-child),
+        th:not(:last-child) {
           border: none;
         }
       }
     }
-    td{
+
+    td {
       vertical-align: top;
-      table{
+
+      table {
         padding: 7.5px 10px;
-        table{
+
+        table {
           padding: 0px;
-          td{
+
+          td {
             padding: 7.5px 10px;
           }
         }
       }
+    }
+  }
+}
+
+.request-error {
+  vertical-align: top;
+  border-top: 1px solid #ACACAC;
+  border-bottom: 1px solid #ACACAC;
+  padding: 20px !important;
+  padding-right: 98px !important;
+  td{
+    vertical-align: top;
+  }
+  .message {
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 34px;
+    letter-spacing: 0.02em;
+    padding-left: 16px;
+  }
+  .icon{
+    img{
+      margin-top: 2px;
     }
   }
 }
