--- a/themes/ink/layouts/partials/ccir/request-error.html
+++ b/themes/ink/layouts/partials/ccir/request-error.html
@@ -1,4 +1,4 @@
-<table class="request-error bordered-table">
+<table class="request-error bordered-table border-top-bottom">
   <tr>
     <td width="30px" class="icon">
       <img src="{{ "images/static-images/alert-red.svg" | relURL }}"
