--- a/themes/ink/layouts/partials/table-title.html
+++ b/themes/ink/layouts/partials/table-title.html
@@ -4,9 +4,11 @@
         <td>
             <h1 class="table-title {{.className}}">{{ safeHTML .tableTitle }} {{ if .tableInfo }}{{ partial "info-icon" (dict "message" .tableInfo "className" "middle")}}{{ end }}</h1>
         </td>
+        {{if .refNo }}
         <td class="right-side">
-            <p class="ref-no"><span class="title">reference number</span><span>5653AFG34</span></p>
+            <p class="ref-no"><span class="title">reference number</span><span>{{ .refNo }}</span></p>
         </td>
+        {{end}}
     </tr>
 </table>
 <!-- table title | end -->
