--- a/themes/ink/layouts/screens/page1.html
+++ b/themes/ink/layouts/screens/page1.html
@@ -18,4 +18,6 @@
 {{ partial "table-title" (dict "tableTitle" "PRESENCE IN" ) }}
 {{ partial "ccir/checkboxes" (dict "checkboxesData" .Site.Data.ccir.checkboxes) }}
 
+{{ partial "ccir/foot-note" (dict "note" "Place for footnote for above section") }}
+
 {{ end }}
