table -  SCORE AND ALGORITHM

--- a/themes/ink/layouts/screens/page1.html
+++ b/themes/ink/layouts/screens/page1.html
@@ -1,23 +1,46 @@
 {{ define "main" }}
 
-{{ partial "ccir/report-title" (dict "report_title" "COMPREHENSIVE CREDIT INFORMATION REPORT") }}
-
-<table>
+<table class="no-break">
     <tr>
-        <td class="font-36-bold">MOHANA PARAB</td>
-    </tr>
+        <td>
+
+            {{ partial "ccir/report-title" (dict "report_title" "COMPREHENSIVE CREDIT INFORMATION REPORT") }}
+
+            <table>
+                <tr>
+                    <td class="font-36-bold">MOHANA PARAB</td>
+                </tr>
+            </table>
+
+            {{ partial "ccir/horizontal-separator" }}
+
+        </td>
+        </tr>
 </table>
 
-{{ partial "ccir/horizontal-separator" }}
-
-{{ partial "table-title" (dict "tableTitle" "ENQUIRY INPUT INFORMATION" "refNo" "5653AFG34") }}
-{{ partial "ccir/table-style1" (dict "tableData" .Site.Data.ccir.enquiry_input_info ) }}
+<table class="no-break">
+    <tr>
+        <td>
+            {{ partial "table-title" (dict "tableTitle" "ENQUIRY INPUT INFORMATION" "refNo" "5653AFG34") }}
+            {{ partial "ccir/table-style1" (dict "tableData" .Site.Data.ccir.enquiry_input_info ) }}
+        </td>
+    </tr>
+</table>
 
 {{ partial "ccir/request-error" (dict "message" "YOUR REQUEST HAS BEEN REJECTED BY THE SERVER. PLEASE MAKE THE APPROPRIATE CHANGE AND RE-SUBMIT THE REQUEST OR CONTACT THE SYSTEM ADMINISTRATOR.") }}
 
 {{ partial "table-title" (dict "tableTitle" "PRESENCE IN" ) }}
 {{ partial "ccir/checkboxes" (dict "checkboxesData" .Site.Data.ccir.checkboxes) }}
 
-{{ partial "ccir/foot-note" (dict "note" "Place for footnote for above section") }}
+<table class="no-break">
+    <tr>
+        <td>
+            {{ partial "table-title" (dict "tableTitle" "SCORE AND ALGORITHM") }}
+            {{ partial "halfcircle-score-graph" (dict "scoreGraphs" .Site.Data.ccir.score_graphs "footNote" true ) }}
+            {{ partial "ccir/foot-note" (dict "note" "Place for footnote for above section") }}
+            {{ partial "spacer" (dict "space" "35") }}
+        </td>
+    </tr>
+</table>
 
 {{ end }}
