--- a/themes/ink/layouts/partials/halfcircle-score-graph.html
+++ b/themes/ink/layouts/partials/halfcircle-score-graph.html
@@ -1,9 +1,70 @@
+{{$footNote:= .footNote}}
 {{if .scoreGraphs}}
     {{range .scoreGraphs}}
-        <table class="bordered-table horizontal-border score-graph-tables" role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center">
+        <table class="bordered-table horizontal-border score-graph-tables {{if eq $footNote true}}mb-15{{end}}" role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center">
 
             {{if .creditvison_score}}
                 {{range .creditvison_score}}
+                    <tr>
+                        <td>
+                            <table class="score-graph-table {{if eq .border_bottom true}}border-bottom{{end}}" role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center">
+                                <tr>
+                                    <td class="title-details">
+                                        <p class="score-title">{{safeHTML .graph_title}}</p>
+                                        <p class="score-subtitle">{{safeHTML .graph_subtitle}}</p>
+                                    </td>
+                                    <td class="graph">
+                                        <img class="graph-img" src="{{ .graph_image | relURL}}">
+                                    </td>
+                                    <td class="factors">
+                                        {{if .score_factors}}
+                                            <p class="td-title mb-10">Scoring Factors</p>
+                                            <ul class="list">
+                                                {{range .score_factors}}
+                                                    <li>{{.}}</li>
+                                                {{end}}
+                                            </ul>
+                                        {{end}}
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                {{end}}
+            {{end}}
+
+            {{if .ntc_score}}
+                {{range .ntc_score}}
+                    <tr>
+                        <td>
+                            <table class="score-graph-table {{if eq .border_bottom true}}border-bottom{{end}}" role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center">
+                                <tr>
+                                    <td class="title-details">
+                                        <p class="score-title">{{safeHTML .graph_title}}</p>
+                                        <p class="score-subtitle">{{safeHTML .graph_subtitle}}</p>
+                                    </td>
+                                    <td class="graph">
+                                        <img class="graph-img" src="{{ .graph_image | relURL}}">
+                                    </td>
+                                    <td class="factors">
+                                        {{if .score_factors}}
+                                            <p class="td-title mb-10">Scoring Factors</p>
+                                            <ul class="list">
+                                                {{range .score_factors}}
+                                                    <li>{{.}}</li>
+                                                {{end}}
+                                            </ul>
+                                        {{end}}
+                                    </td>
+                                </tr>
+                            </table>
+                        </td>
+                    </tr>
+                {{end}}
+            {{end}}
+
+            {{if .microfinance_score}}
+                {{range .microfinance_score}}
                     <tr>
                         <td>
                             <table class="score-graph-table {{if eq .border_bottom true}}border-bottom{{end}}" role="presentation" aria-hidden="true" cellspacing="0" cellpadding="0" border="0" align="center">
