--- a/themes/ink/layouts/screens/page2.html
+++ b/themes/ink/layouts/screens/page2.html
@@ -15,7 +15,7 @@
     <tr>
         <td>
             {{ partial "table-title" (dict "tableTitle" "BORROWER SUMMARY" "oldestTrade" "24/05/98" "recentTrade" "26/07/01") }}
-            {{ partial "ccir/borrower-summary" (dict "algorithm_table" .Site.Data.ccir.borrower_summary "footNote" true ) }}
+            {{ partial "ccir/borrower-summary" (dict "borrower_summary" .Site.Data.ccir.borrower_summary "footNote" true ) }}
             {{ partial "ccir/foot-note" (dict "note" "Place for footnote for above section") }}
         </td>
     </tr>
