--- a/themes/ink/layouts/partials/ccir/borrower-summary.html
+++ b/themes/ink/layouts/partials/ccir/borrower-summary.html
@@ -1,173 +1,159 @@
-<table class="report-table bordered-table report-table-style2 padding-0">
-  <thead>
-    <tr>
-      <th style="width: 40%">ACCOUNTS<span class="subHeading">(#)</span></th>
-      <th>BALANCES<span class="subHeading">(₹)</span></th>
-    </tr>
-  </thead>
-  <tbody>
-    <tr>
-      <td>
-        <table>
-          <tr>
-            <td width="35%">
-              <p class="count">4</p>
-              <p class="count-title">TOTAL ACCOUNTS</p>
-            </td>
-            <td class="text-blue">
-              <p class="count">3</p>
-              <p class="count-title">ACTIVE</p>
-            </td>
-            <td class="text-red">
-              <p class="count">2</p>
-              <p class="count-title">OVERDUE</p>
-            </td>
-          </tr>
-        </table>
-        <table>
-          <tr>
-            <td>
-              <p class="count">1</p>
-              <p class="count-title">GOOD CLOSURE</p>
-            </td>
-            <td>
-              <p class="count">1</p>
-              <p class="count-title">OPENED IN LAST 6 MONTHS</p>
-            </td>
-          </tr>
-        </table>
-      </td>
-      <td class="balance-td">
-        <table>
-          <tr>
-            <td>
-              <p class="count-medium"><sup>₹</sup>10, 97,80,000</p>
-              <p class="count-title">ACTIVE HIGH CR / SANC.</p>
-            </td>
-            <td>
-              <p class="count-medium"><sup>₹</sup>10,89,40,002</p>
-              <p class="count-title">TOTAL HIGH CR / SANC.</p>
-            </td>
-            <td class="text-blue">
-              <p class="count-medium"><sup>₹</sup>7,09,890</p>
-              <p class="count-title">CURRENT BALANCE</p>
-            </td>
-            <td width="20%" class="text-red">
-              <p class="count-medium"><sup>₹</sup>4,500</p>
-              <p class="count-title">OVERDUE</p>
-            </td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </tbody>
-</table>
-
-<table class="tables-group mb-15">
-  <tr>
-    <td class="delinquency-table">
-      <table
-        class="report-table bordered-table report-table-style2 padding-0"
-      >
+{{if .borrower_summary}}
+  {{range .borrower_summary}}
+    {{if or .accounts .balences}}
+      <table class="report-table bordered-table report-table-style2 padding-0">
         <thead>
           <tr>
-            <th>
-              delinquency<span class="subHeading"
-                >(COUNT OF BREACH INSTANCES)</span
-              >
-            </th>
+            {{if .accounts}}
+              <th style="width: 39%">ACCOUNTS<span class="subHeading">(#)</span></th>
+            {{end}}
+            {{if .balances}}
+              <th>BALANCES<span class="subHeading">(₹)</span></th>
+            {{end}}
           </tr>
         </thead>
         <tbody>
           <tr>
-            <td>
-              <table>
-                <tr>
-                  <td>
-                    <p class="count">5</p>
-                    <p class="count-title">1+ DPD</p>
-                    <p class="count-subtitle">(IN PAST 12 MONTHS)</p>
-                  </td>
-                  <td>
-                    <p class="count">2</p>
-                    <p class="count-title">30+ DPD</p>
-                    <p class="count-subtitle">(IN PAST 12 MONTHS)</p>
-                  </td>
-                  <td>
-                    <p class="count">1</p>
-                    <p class="count-title">60+ DPD</p>
-                    <p class="count-subtitle">(IN PAST 12 MONTHS)</p>
-                  </td>
-                  <td>
-                    <p class="count green-state">NO DPD</p>
-                    <p class="count-title">90+ DPD</p>
-                    <p class="count-subtitle">(IN PAST 12 MONTHS)</p>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </td>
-    <td class="derogatory-table">
-      <table
-        class="report-table bordered-table report-table-style2 padding-0"
-      >
-        <thead>
-          <tr>
-            <th>deROGATORY</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>
-              <table>
-                <tr>
-                  <td>
-                    <p class="count-text">NO ACCOUNTS WITH<br>DEROGATORY STATUS</p>
-                    <p class="count-title">WORST RATING EVER</p>
-                    <p class="count-subtitle">(IN PAST 36 MONTHS)</p>
-                  </td>
-                </tr>
-              </table>
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </td>
-    <td class="recent-enquiry-table">
-        <table
-          class="report-table bordered-table report-table-style2 padding-0"
-        >
-          <thead>
-            <tr>
-              <th>RECENT ENQUIRY</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
+            {{if .accounts}}
               <td>
-                <table>
-                  <tr>
-                    <td class="text-blue">
-                      <p class="count">1</p>
-                      <p class="count-title">IN 30 DAYS</p>
-                    </td>
-                    <td>
-                        <p class="count">1</p>
-                        <p class="count-title">IN 90 DAYS</p>
-                      </td>
-                      <td>
-                        <p class="count">4</p>
-                        <p class="count-title">IN 360 DAYS</p>
-                      </td>
-                  </tr>
-                </table>
+                {{range .accounts}}
+                  <table>
+                    <tr>
+                      {{range .row}}
+                        <td {{if .width}}width="{{.width}}"{{end}} class="{{if .status}}{{.status}}{{end}}">
+                          <p class="count">{{.content}}</p>
+                          <p class="count-title">{{.title}}</p>
+                        </td>
+                      {{end}}
+                    </tr>
+                  </table>
+                {{end}}
               </td>
-            </tr>
-          </tbody>
-        </table>
-    </td>
-  </tr>
-</table>
+            {{end}}
+            {{if .balances}}
+              <td class="balance-td">
+                {{range .balances}}
+                  <table>
+                    <tr>
+                      {{range .row}}
+                        <td {{if .width}}width="{{.width}}"{{end}} class="{{if .status}}{{.status}}{{end}}">
+                          <p class="count">{{safeHTML .content}}</p>
+                          <p class="count-title">{{.title}}</p>
+                        </td>
+                      {{end}}
+                    </tr>
+                  </table>
+                {{end}}
+              </td>
+            {{end}}
+          </tr>
+        </tbody>
+      </table>
+    {{end}}
+
+    <table class="tables-group mb-15">
+      <tr>
+        {{if .delinquency}}
+          <td class="delinquency-table">
+            <table
+              class="report-table bordered-table report-table-style2 padding-0"
+            >
+              <thead>
+                <tr>
+                  <th>
+                    delinquency<span class="subHeading"
+                      >(COUNT OF BREACH INSTANCES)</span
+                    >
+                  </th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    {{range .delinquency}}
+                      <table>
+                        <tr>
+                          {{range .row}}
+                            <td>
+                              <p class="count {{if .state}}{{.state}}{{end}}">{{.content}}</p>
+                              <p class="count-title">{{.title}}</p>
+                              <p class="count-subtitle">{{.subtitle}}</p>
+                            </td>
+                          {{end}}
+                        </tr>
+                      </table>
+                    {{end}}
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+        {{end}}
+        {{if .derogatory}}
+          <td class="derogatory-table">
+            <table
+              class="report-table bordered-table report-table-style2 padding-0"
+            >
+              <thead>
+                <tr>
+                  <th>deROGATORY</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    {{range .derogatory}}
+                      <table>
+                        <tr>
+                          {{range .row}}
+                            <td>
+                              <p class="count-text">{{safeHTML .content}}</p>
+                              <p class="count-title">{{.title}}</p>
+                              <p class="count-subtitle">{{.subtitle}}</p>
+                            </td>
+                          {{end}}
+                        </tr>
+                      </table>
+                    {{end}}
+                  </td>
+                </tr>
+              </tbody>
+            </table>
+          </td>
+        {{end}}
+        {{if .recent_enquiry}}
+          <td class="recent-enquiry-table">
+              <table
+                class="report-table bordered-table report-table-style2 padding-0"
+              >
+                <thead>
+                  <tr>
+                    <th>RECENT ENQUIRY</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>
+                      {{range .recent_enquiry}}
+                        <table>
+                          <tr>
+                            {{range .row}}
+                              <td {{if .width}}width="{{.width}}"{{end}} class="{{if .status}}{{.status}}{{end}}">
+                                <p class="count">{{.content}}</p>
+                                <p class="count-title">{{.title}}</p>
+                              </td>
+                            {{end}}
+                          </tr>
+                        </table>
+                      {{end}}
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+          </td>
+        {{end}}
+      </tr>
+    </table>
+
+  {{end}}
+{{end}}
