Page 5 (In Progress)

--- a/docs/scss/style.scss
+++ b/docs/scss/style.scss
@@ -2886,3 +2886,149 @@ $grey5 : #707070;
     text-align: center !important;
   }
 }
+
+.report-table {
+  &.report-base-table {
+    tr {
+      th {
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 24px;
+        color: #00A6CA;
+        padding: 20px 20px 15px;
+      }
+
+      td {
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 24px;
+        padding: 15px 20px;
+      }
+
+      th,
+      td {
+        text-align: left;
+        border: 1px solid #ACACAC;
+        border-bottom: none;
+        border-left: none;
+
+        &:last-child {
+          border-right: none;
+        }
+      }
+    }
+
+    .base-table-footer {
+      border: none;
+      padding: 10px 0px;
+      border-top: 1px solid #ACACAC;
+
+      th {
+        color: #707070;
+      }
+
+      tr {
+
+        th,
+        td {
+          border: none;
+        }
+
+        td,
+        th {
+          padding: 5px 20px;
+        }
+      }
+    }
+
+    .table-heading-small {
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 24px;
+      text-transform: uppercase;
+      color: #00A6CA;
+      display: block;
+      margin-bottom: 6px;
+    }
+
+    .highlight-blue {
+      font-weight: 600;
+      font-size: 18px;
+      line-height: 24px;
+      color: #00A6CA;
+      margin-right: 10px;
+      min-width: 27px;
+      display: inline-block;
+    }
+    &.borderSpacingTable{
+      tr{
+        &:not(:first-child){
+          td{
+            border-top: none;
+          }
+        }
+        td{
+          padding: 10px 0px;
+          table{
+            tr{
+              td{
+                border-top: none;
+                border-bottom: none;
+                padding: 0px 20px;
+              }
+            }
+          }
+          &.borderSpacingInner{
+            padding-top: 20px;
+            padding-bottom: 15px;
+            table{
+              tr{
+                &:not(:last-child){
+                  td{
+                    padding-bottom: 20px;
+                  }
+                }
+                td{
+                  padding: 0px;
+                  table{
+                    tr{
+                      td{
+                        padding: 0px 20px !important;
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+      &.emailsTable{
+        tr{
+          td{
+              table{
+                tr{
+                  &:not(:last-child){
+                    td{
+                      padding-bottom: 10.5px;
+                    }
+                  }
+                }
+              }
+          }
+        }
+      }
+    }
+  }
+}
+
+.table-group2{
+  .table-group-cols{
+    .cols-2{
+      vertical-align: top;
+      &:not(:last-child){
+        padding-right: 31px;
+      }
+    }
+  }
+}
