--- a/themes/ink/layouts/screens/page3.html
+++ b/themes/ink/layouts/screens/page3.html
@@ -11,7 +11,7 @@
     </tr>
 </table>
 
-<table>
+<table class="no-break">
     <tr>
         <td>
             {{ partial "table-title" (dict "tableTitle" "PRODUCT SUMMARY") }}
